fix contrast code highlights

--- a/src/scss/2023.scss
+++ b/src/scss/2023.scss
@@ -545,12 +545,24 @@ th {
 	width: fit-content;
 }
 
-.nt {
-	color: oklch(from var(--color) calc(l + 0.1) c h);
+@media (prefers-color-scheme: light) {
+	.nt {
+		color: oklch(from var(--color) calc(l - 0.1) c h);
+	}
+
+	.na {
+		color: oklch(from var(--color) calc(l - 0.3) c h);
+	}
 }
 
-.na {
-	color: oklch(from var(--color) calc(l + 0.3) c h);
+@media (prefers-color-scheme: dark) {
+	.nt {
+		color: oklch(from var(--color) calc(l + 0.1) c h);
+	}
+
+	.na {
+		color: oklch(from var(--color) calc(l + 0.3) c h);
+	}
 }
 
 .footnotes {
